<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.iu.activities.AddEditEventoActivivy">

    <include
        android:id="@+id/miToll"
        layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_detalle"/>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/tpFecha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:gravity="center">

    <LinearLayout
        android:id="@+id/llTodo"
        android:elevation="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="9"
                android:hint="@string/et_titulo_del_evento"
                android:background="@drawable/shape_parrafo"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginEnd="8dp"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imgTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/azul_claro"
                android:src="@drawable/ic_keyboard_voice_" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="9"
                android:hint="@string/et_descripcion_del_evento"
                android:background="@drawable/shape_parrafo"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"/>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imgDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_voice_"
                android:backgroundTint="@color/azul_claro"
                />
        </LinearLayout>




        <Button
            android:id="@+id/btnFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/btn_fecha"
            android:background="@drawable/shape_detalle"
            />



            <Button
                android:id="@+id/btnHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_hora"
                android:background="@drawable/shape_detalle"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/shape_detalle"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>